# Agente_Sql

./: .gitignore  README.md  pyproject.toml  requirements.txt
api/: main.py
api/routes/: chat.py
assets/: system_prompt.txt
core/: config.py
services/: formatter.py  llm_service.py  logger.py  result_parser.py  sql_connector.py
utils/: print_colors.py
views/: chat.html
